--- a/index.html
+++ b/index.html
@@ -4,10 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link type="stylesheet" href="styles.css">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Economica|Pacifico&display=swap" rel="stylesheet"> 
 </head>
 <body>
     
+    <header class="page-header">
+        <div class="fixed-width">
+            <em class="logo">Blitz</em>
+            <nav>
+                <ul>
+                    <li><a href="#">Homepage<em>Home</em></a></li>
+                    <li><a href="#">Who are we?<em>About</em></a></li>
+                    <li><a href="#">My portfolio<em>Projects</em></a></li>
+                    <li><a href="#">Latest news<em>Blog</em></a></li>
+                    <li><a href="#">Get in touch<em>Contact</em></a></li>
+                </ul>
+            </nav>
+            <div class="clearfix"></div>
+
+        </div>
+    </header>
+
+    <section>
+
+    </section>
+
+    <footer>
+    </footer>
 </body>
 </html>
