Both Header and Footer are done

--- a/index.html
+++ b/index.html
@@ -31,7 +31,14 @@
 
     </section>
 
-    <footer>
+    <footer class="page-footer">
+        <div class="page-footer-content fixed-width">
+            <small class="copyright">All Content Copyright 2012 - <bold>Blitz.</bold> All Rights Reserved</small>
+            <small class="credits">Site designed by <a href="#">Alejandro Ramírez</a></small>
+
+
+        </div>
+        <div class="clearfix"></div>
     </footer>
 </body>
 </html>
