--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
         </div>
     </header>
 
-    <section>
+    <section class="fixed-width">
+        <figure class="main-visual">
+            <img src="http://lorempixel.com/g/940/424/abstract">
+            <figcaption>
+                <strong class="title">Image title caption</strong>
+                <p>Proin eget tortor risus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Sed porttitor lectus nibh.</p>
+            </figcaption>
+            <div class="clearfix"></div>
+        </figure>
 
     </section>
 
@@ -35,8 +43,6 @@
         <div class="page-footer-content fixed-width">
             <small class="copyright">All Content Copyright 2012 - <bold>Blitz.</bold> All Rights Reserved</small>
             <small class="credits">Site designed by <a href="#">Alejandro Ramírez</a></small>
-
-
         </div>
         <div class="clearfix"></div>
     </footer>
