Claims part done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Economica|Pacifico&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="fontawesome.css">
 </head>
 <body>
     
@@ -28,7 +29,7 @@
     </header>
 
     <section class="fixed-width">
-        <figure class="main-visual">
+        <figure class="main-visual data-block">
             <img src="http://lorempixel.com/g/940/424/abstract">
             <figcaption>
                 <strong class="title">Image title caption</strong>
@@ -36,6 +37,43 @@
             </figcaption>
             <div class="clearfix"></div>
         </figure>
+
+        <section class="claims data-block">
+            <article class="claim">
+                <header>
+                    <i class="fa fa-search"></i>
+                    <h2>Check out our latest projects</h2>
+                </header>
+                <div class="clearfix"></div>
+                <p>Nulla porttitor accumsan tincidunt. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Donec rutrum congue leo eget malesuada. Proin eget tortor risus.
+                </p>
+                <i class="fa fa-angle-double-right"></i>
+                <a href="#" class="title">Find out more</a>
+            </article>
+            <article class="claim">
+                <header>
+                    <i class="fa fa-star"></i>
+                    <h2>Guarantee 5 star quality work</h2>
+                </header>
+                <div class="clearfix"></div>
+                <p>Nulla porttitor accumsan tincidunt. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Donec rutrum congue leo eget malesuada. Proin eget tortor risus.
+                </p>
+                <i class="fa fa-angle-double-right"></i>
+                <a href="#" class="title">Find out more</a>
+            </article>
+            <article class="claim">
+                <header>
+                    <i class="fa fa-stack-exchange"></i>
+                    <h2>Stay connected by reading the blog</h2>
+                </header>
+                <div class="clearfix"></div>
+                <p>Nulla porttitor accumsan tincidunt. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Donec rutrum congue leo eget malesuada. Proin eget tortor risus.
+                </p>
+                <i class="fa fa-angle-double-right"></i>
+                <a href="#" class="title">Find out more</a>
+            </article>
+        </section>
+        <div class="clearfix"></div>
 
     </section>
 
