--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Blitz Homepage</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Economica|Pacifico&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="fontawesome.css">
@@ -73,7 +73,57 @@
                 <a href="#" class="title">Find out more</a>
             </article>
         </section>
-        <div class="clearfix"></div>
+        <div class="clearfix" style="margin-bottom: 3rem;"></div>
+
+        <section class="portfolio data-block">
+            <div class="title-wrapper">
+                <h2>My latest work</h2>
+            </div>
+
+            <div class="columns">
+                <article class="work">
+                    <figure>
+                        <img src="http://lorempixel.com/220/120/nature?t=1">
+                    </figure>
+                    <h3>Vallarta brochure</h3>
+                    <p>Nulla porttitor accumsan tincidunt. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Donec rutrum congue leo eget malesuada. Proin eget tortor risus.</p>
+                    <i class="fa fa-angle-double-right"></i>
+                    <a href="#" class="title">View project</a>
+                </article>
+
+                <article class="work">
+                    <figure>
+                        <img src="http://lorempixel.com/220/120/nature?t=2">
+                    </figure>
+                    <h3>Photoshop tutorials</h3>
+                    <p>Nulla porttitor accumsan tincidunt. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Donec rutrum congue leo eget malesuada. Proin eget tortor risus.</p>
+                    <i class="fa fa-angle-double-right"></i>
+                    <a href="#" class="title">View project</a>
+                </article>
+                
+                <article class="work">
+                    <figure>
+                        <img src="http://lorempixel.com/220/120/nature?t=3">
+                    </figure>
+                    <h3>Business cards</h3>
+                    <p>Nulla porttitor accumsan tincidunt. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Donec rutrum congue leo eget malesuada. Proin eget tortor risus.</p>
+                    <i class="fa fa-angle-double-right"></i>
+                    <a href="#" class="title">View project</a>
+                </article>
+
+                <article class="work">
+                    <figure>
+                        <img src="http://lorempixel.com/220/120/nature?t=4">
+                    </figure>
+                    <h3>Website design</h3>
+                    <p>Nulla porttitor accumsan tincidunt. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Donec rutrum congue leo eget malesuada. Proin eget tortor risus.</p>
+                    <i class="fa fa-angle-double-right"></i>
+                    <a href="#" class="title">View project</a>
+                </article>
+
+            </div>
+            <div class="clearfix"></div>
+        </section>
 
     </section>
 
